config/deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ipfs-kit
  labels:
    name: ipfs-kit
